# fastapi

./: .env.example  README.md  pyproject.toml
src/: dependencies.py  main.py
src/config/: db.py  events.py
src/config/settings/: base.py
src/crud/: PartnerIq.py
src/models/: airports.py
src/routers/: __init__.py  partner_iq.py
src/utils/: response_handler.py
